--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -122,10 +122,10 @@
    ========================================================================== */
 
 .author__avatar {
-  display: table-cell;
+  //display: table-cell;
   vertical-align: top;
-  width: 36px;
-  height: 36px;
+  //width: 36px;
+  //height: 36px;
 
   @include breakpoint($large) {
     display: block;
@@ -134,12 +134,12 @@
   }
 
   img {
-    max-width: 110px;
+    //max-width: 110px;
     border-radius: 50%;
 
     @include breakpoint($large) {
       padding: 5px;
-      border: 1px solid $border-color;
+      //border: 1px solid $border-color;
     }
   }
 }
